# Life2Tea

./: .env  .gitignore  DGX-SPARK-部署指南.md  LICENSE  README.md  benchmark_lfm2.py  benchmark_mtp.py  benchmark_mtp_deep_optimize.py  benchmark_mtp_optimize.py  benchmark_ollama.py  benchmark_ollama.sh  benchmark_report.html  benchmark_report_4models.html  benchmark_result.txt  benchmark_vllm.py  lfm2_result.json  llama_vs_vllm_report.html  mtp_benchmark_report.html  mtp_deep_optimize_report.html  performance_investigation_report.md  quick_bench_llama.py  start_llm2.bat  start_llm2.sh  start_proxy.sh  test_tool_understanding.py
backend/: DEPLOY_LINUX.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: api_keys.py  api_keys_middleware.py  config.py  database.py  logger.py  logging_service.py  metrics.py  model_router.py  routing.py  stats_middleware.py  stats_service.py  user_service.py
backend/app/experts/: chat_handler.py
backend/app/plugins/: backend_registry.py  base.py  inproc_loader.py  lifecycle.py  manifest.py  model_registry.py  ollama_plugin.py  registry.py  runtime_runner.py  subprocess_runner.py
backend/app/routers/: __init__.py  api_keys_router.py  auth_router.py  chat_router.py  config_router.py  log_router.py  logs_router.py  metrics_router.py  model_router_router.py  models_router.py  openai_proxy.py  plugins_router.py  proxy_service.py  router_router.py  stats_router.py  (+1 more)
backend/config/: model_router.json
backend/tests/: conftest.py  test_api_keys.py  test_health.py  test_lifecycle.py  test_plugin_manifest.py
(+41 files in other folders)
